[package]
name = "hdr-toggle"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
windows = { version = "0.58", features = ["Win32_Devices_Display", "Win32_Foundation", "Win32_Graphics_Gdi"] }
